feat/auth/minor changes (#33)
* feat/auth: minor changes

* minor changes

* minor changes
